# FinAgent

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
agents/: agent_interface.py
agents/orchestrator/: agent_runner.py  orchestrator_agent.py
agents/sub_agents/: db_agent.py  file_agent.py
api/: app.py
databases/data/business_finance_db/: init.sql  seed.sql
databases/data/personal_finance_db/: init.sql  seed.sql
databases/infra/: connection.py  crud.py  crud_documents.py  models.py
frontend/: .env.example  .gitignore  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/query/: page.tsx
frontend/app/sources/: page.tsx
frontend/components/: Chatpanel.tsx  Nav.tsx  finagent-marketing-dashboard.tsx
mcp_connection/: mcp_client.py
mcp_connection/servers/: business_finance_server.py  db_server.py  file_server.py  main_mcp_server.py
services/db_service/: db_factory.py  ops.py  schemas.py
services/rag_service/: chunker.py  vector_store.py
tests/: test_business_tools.py  test_file_tools.py  test_mcp_tools.py
tools/: tool_executor.py
vector_store/: chroma.sqlite3
