[project]
name = "finagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "mcp[cli]>=1.27.0",
    "ollama>=0.6.1",
    "psycopg2>=2.9.11",
    "pypdf>=6.10.0",
    "pywin32>=311",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "werkzeug>=3.1.8",
]
